--- a/www/templates/selection.html
+++ b/www/templates/selection.html
@@ -1,28 +1,38 @@
 <ion-view view-title="Selection" class="dashboard">
+
+  <ion-nav-bar>
+  <ion-nav-back-button class="button-gold">
+  <i class="ion-arrow-left-c"></i> Back
+  </ion-nav-back-button>
+  </ion-nav-bar>
+
   <ion-content class="padding">
-  <div ng-show=profiletoshow=='1'>
-  <h1 class="title">Découvrez votre selection {{userprofi.user_name}}</h1>
-       <div class="list">
-      <label class="item item-input">
-      <i class="icon ion-search placeholder-icon"></i>
-      <input type="text" placeholder="Que cherchez-vous ?" ng-model="search">
-      </label>
-    </div>
-    <div class="item item-body">
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows | filter:search | orderBy:'date' track by $index" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
-        <img ng-src="{{show.image}}">
-        <h3>{{show.title}}</h3>
-        <p>{{show.description}}</p>
-      </ion-item>
-    </ion-list>
-    </div>
+  
+    <div ng-show=profiletoshow=='1'>
+      <h1 class="title">Découvrez votre selection {{userprofi.user_name}}</h1>
+        <div class="list">
+          <label class="item item-input">
+          <i class="icon ion-search placeholder-icon"></i>
+          <input type="text" placeholder="Que cherchez-vous ?" ng-model="search">
+          </label>
+        </div>
+        <div class="item item-body">
+          <ion-list>
+          <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows | filter:search | orderBy:'date' track by $index" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
+          <img ng-src="{{show.image}}">
+          <h3>{{show.title}}</h3>
+          <p>{{show.description}}</p>
+          </ion-item>
+          </ion-list>
+        </div>
     </div>
     <div ng-show=profiletoshow=='0'>
-    <h1 class="title">Connectez vous pour accéder à votre liste</h1>
-    <button class="button button-block button-positive" ng-click="goNext('/tab/connexion')">
-    Connexion 
-  </button>
+      <h1 class="title">Connectez vous pour accéder à votre liste</h1>
+      <button class="button button-block button-positive" ng-click="goNext('/tab/connexion')">
+      Connexion 
+      </button>
     </div>
+
   </ion-content>
+
 </ion-view>
