--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -33,7 +33,7 @@
       </label>
     </div>
     <div>
-      <p> <br/> Et / Ou indiquer vos préférences musicales </p>
+      <p> <br/> Et / Ou indiquer votre préférence musicale </p>
       <div class="list">
         <label class="item item-input item-select">
           <div class="input-label">
